--- a/ReservaTuSala - ANDROID/app/src/main/res/layout/activity_login.xml
+++ b/ReservaTuSala - ANDROID/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,12 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         />
+    <EditText
+        android:layout_width="200sp"
+        android:layout_height="20sp"
+        android:layout_above="@+id/textViewLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="102dp" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
