--- a/reserva.tu.sala.project/app/src/main/res/layout/salas_list_item.xml
+++ b/reserva.tu.sala.project/app/src/main/res/layout/salas_list_item.xml
@@ -18,14 +18,16 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="200dp"
+            >
 
             <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/imgSala"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:src="@drawable/ic_home"
-                android:layout_gravity="left" />
+                android:layout_gravity="left"
+                android:background="@drawable/gradient_image"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
