--- a/reserva.tu.sala.project/app/src/main/res/layout/salas_list_item.xml
+++ b/reserva.tu.sala.project/app/src/main/res/layout/salas_list_item.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
     card_view:cardCornerRadius="5dp"
-    android:id="@+id/cvChangeFood"
+    android:id="@+id/cvListSalas"
     android:focusable="true"
     android:clickable="true"
     android:background="?attr/selectableItemBackground">
@@ -27,7 +27,8 @@
                 android:layout_height="200dp"
                 android:src="@drawable/ic_home"
                 android:layout_gravity="left"
-                android:background="@drawable/gradient_image"/>
+                android:background="@drawable/gradient_image"
+                android:scaleType="centerCrop"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
